TestSuite/errors/err0546.pas
procedure p0<T>(p: T->());
begin
end;

procedure p1<T>(o: T);
begin
  
end;

begin
  p0(p1);
end.